--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
+*.iml
+.iml
+*/.iml
+**/.iml
+target/
+*/target/
+**/target/
+.project
+*/.project
+**/.project
+.classpath
+*.classpath
+.settings/
+*/.settings/
+**/.settings/
+build/
+*/build/
+**/build/
+deploy/
+*/deploy/
+**/deploy/
+logs/
+*/logs/
+**/logs/
 *-no-commit
 *-no-commit/
 .DS_Store
