--- a/server-java/build.xml
+++ b/server-java/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="breaking-game" default="install" basedir=".">
+<project name="freetank" default="install" basedir=".">
 	<property environment="env" />
 	<property name="project.name" value="${ant.project.name}" />
 	<property name="project.version" value="1.1.0" />
